@@ -2431,9 +2431,7 @@
                         [/message]
 
                         [petrify]
-                            [filter]
-                                id=Zhul
-                            [/filter]
+                            id=Zhul
                         [/petrify]
                     [/then]
                 [/if]
