@@ -12,6 +12,8 @@ Version 1.9.2+svn:
    * Updated translations: Italian, Japanese, Korean, Spanish
  * User interface:
    * Converted some dialog boxes to GUI2
+* WML Engine:
+   *  Created tag [petrify] (bug #17077). Moved [unpetrify] to lua.
 
 Version 1.9.2:
  * Campaigns:
